# ioda_repo

./: .gitignore  README.md  pyproject.toml
config/: west_africa.yaml
docs/: api_notes.md  data_dictionary.md  entity_catalog.md  qa_report.md
scripts/: ioda_build_panel.py  ioda_discover.py  ioda_fetch.py  ioda_monthly_closeout.py  ioda_qa.py
src/ioda/: __init__.py  api.py  discover.py  fetch.py  qa.py  transform.py  utils.py
tests/: test_smoke.py
