[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ioda-west-africa-pipeline"
version = "0.1.0"
description = "Reproducible pipeline for retrieving and building IODA outage signal panels for West Africa"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0,<1",
  "tenacity>=9.0.0,<10",
  "pandas>=2.2.0,<3",
  "pyarrow>=15.0.0,<20",
  "PyYAML>=6.0.1,<7",
  "python-dateutil>=2.9.0,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
